tests/paczka2/big_fuzzy/40222992.err
Error in line 3: wCZd4ty91c A226 93,1
Error in line 7: GXxqIWMrXv S644 63,9
Error in line 19: r6aVoKDJ A226 26,6
Error in line 26: GXxqIWMrXv A87 39,9
Error in line 27: XkeIPEV A226 35,0
Error in line 40: wCZd4ty91c A22X 71,X
Error in line 41: wCZd4ty91c A87 95,7
Error in line 32: Gq4W A226 30,1
Error in line 50: cxdX A87 58,1
Error in line 51: cxdX A226 65,3
Error in line 52: GXxqIWMrXv A87 65,1
Error in line 54: cxdX S37 16,8
Error in line 56: cxdX A87 41,1
Error in line 66: wCZd4ty91c A87 23,2
Error in line 38: XkeIPEV S644 82,3
Error in line 77: GXxqIWMrXv S644 30,8
Error in line 73: wCZd4ty91c A226 64,9
Error in line 62: A87 S644 58,6
Error in line 91: XkeIPEV S644 52,3
Error in line 106: r6aVoKDJ S37 11,1
Error in line 101: cxdX A226 49,4
Error in line 118: cxdX S644 44,7
Error in line 122: r6aVoKDJ S644 87,3
Error in line 126: r6aVoKDJ A226 8,2
Error in line 133: Gq4W A87 82,8
Error in line 135: XkeIPEV S644 64,5
Error in line 141: cxdX A87 8,4
Error in line 148: cxdX S37 4,8
Error in line 145: r6aVoKDJ S644 29,8
Error in line 137: GXxqIWMrXv A87 46,0
Error in line 156: cxdX A226 0,4
Error in line 132: wCZd4ty91c A87 301,6
Error in line 171: A87 A226 42,3
Error in line 164: Gq4W S644 85,7
Error in line 172: A87 A87 28,5
Error in line 159: wCZd4ty91c S644 47,6
Error in line 185: XkeIPEV S37 240,4
Error in line 202: XkeIPEV A87 173,6
Error in line 208: XkeIPEV S644 1138
Error in line 210: cxdX S37 38,5
Error in line 226: GXxqIWMrXv S37 2,5
Error in line 232: A87 A87 35,9
Error in line 244: wCZd4ty91c S37 3,0
Error in line 237: A87 A226 68,5
